# Trajectory-Guard

./: .env.example  .gitignore  LICENSE  README.md  demo.md  pyproject.toml
predictor/: baseline.py  dataset.py  measure_abort.py  measure_transfer.py  pricing.py  train_lora.py  train_predictor.py
results/: plot_abort_curve.py
scripts/: check_before_push.sh
src/eval/: ab_summary.py  run_benchmark.py  swebench.py  swebench_agent.py
src/features/: extract.py
src/graph/: build.py  edges.py  nodes.py  solve.py  state.py
src/models/: predictor.py  provider.py
src/tools/: repo.py  sandbox.py
