[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-guard"
version = "0.1.0"
description = "Self-Healing Code Agent with a fine-tuned failure predictor"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-aws>=0.2.0",
    "ollama>=0.3.0",
    "transformers>=4.44.0",
    "peft>=0.13.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "sentencepiece>=0.2.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
